Fix(front): Reconcile some more API changes to UI
Update commit ID message

Add icon for unknown OS in artifact details

Add author name and github link

Fix artifact-kinds -> artifact_kinds default param once and for all

Add author image for builds

Add tooltips and truncate long commit messages

--- a/web/src/ui/components/BuildCard/BuildCard.scss
+++ b/web/src/ui/components/BuildCard/BuildCard.scss
@@ -26,6 +26,10 @@
     a {
       cursor: pointer;
     }
+    .interactive-text {
+      cursor: pointer;
+      text-decoration: none;
+    }
   }
 
   .card div.card-row .card-left-icon {
@@ -50,14 +54,26 @@
   }
 
   .card div.card-row .card-author {
-    font-size: smaller;
-    margin-right: 8px;
+    font-size: small;
+    margin-right: 12px;
     flex-shrink: 0;
   }
 
   .card div.card-row .card-avatar {
     margin-right: 16px;
     flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    a {
+      text-decoration: none;
+    }
+    img {
+      margin: 0px;
+      padding: 0px;
+      height: 1.25rem;
+      width: 1.25rem;
+      border-radius: 15%;
+    }
   }
 
   // Build body
